# soa

./: .gitmodules  Makefile  python_requirements.txt  soa.mk  valgrind.supp
any/: any.cc  any.h  any.mk
any/testing/: any_test.cc  any_testing.mk
credentials/: credential_provider.cc  credential_provider.h  credentials.cc  credentials.h  credentials.mk
gc/: Makefile.am  gc_lock.cc  gc_lock.h  rcu_protected.h
gc/testing/: gc_test.cc  rcu_protected_test.cc
js/: Makefile.am  js.mk  js_call.cc  js_call.h  js_call_fwd.h  js_registry.h  js_utils.cc  js_utils.h  js_value.cc  js_value.h  js_value_fwd.h  js_wrapped.h  node_exception_tracing.cc
js/testing/: js2json_module.cc  js_call_test.cc  js_exception_passing_module.cc  js_testing.mk  v8_inheritance_module.cc
jsoncpp/: Makefile.am  json_value.cpp  value.h
jsoncpp/testing/: reader_test.cc
launcher/: Makefile.am  launcher.cc  launcher.h
logger/: Makefile.am  callback_output.h  cloud_output.cc  cloud_output.h  compressing_output.h  file_output.cc  file_output.h  filter.cc  filter.h  filter_js.cc  flume_endpoint.h  json_filter.cc  json_filter.h  logger.cc  logger.h  logger.mk  logger_metrics_interface.cc  logger_metrics_mongo.cc  remote_input.cc  remote_input.h  remote_output.cc  remote_output.h  rotating_output.cc  rotating_output.h  stats_output.cc
logger/js/: logger_metrics_interface_js.cc
logger/testing/: json_filter_test.cc  logger_deadlock_test.cc  logger_metrics_test.cc  logger_testing.mk  rotating_file_logger_test.cc
pipeline/testing/: pipeline_test.cc  pipeline_testing.mk
service/: Makefile.am  active_endpoint.cc  active_endpoint.h  asio_http_client.cc  asio_http_client.h  asio_http_service.cc  asio_http_service.h  asio_tcp_service.cc  asio_tcp_service.h  asio_threaded_loop.cc  asio_threaded_loop.h  asio_typed_message_queue.h  asio_utils.h  async_event_source.cc  async_event_source.h  async_writer_source.cc  async_writer_source.h  autodoc.html  aws.cc  aws.h  carbon_connector.cc  carbon_connector.h  chunked_http_endpoint.cc  chunked_http_endpoint.h  connection_handler.h  curl_wrapper.cc  endpoint.cc  endpoint.h  epoller.cc  epoller.h  event_service.cc  event_service.h  fs_utils.cc  fs_utils.h  hdfs.cc  http_client.cc  http_client.h  http_client_v1.cc  http_client_v1.h  http_client_v2.cc  (+103 more)
service/examples/: rest_api_example.cc
service/js/: s3_js.cc  service_base_js.cc
service/testing/: asio_http_client_bench.cc  asio_http_client_test.cc  asio_http_service_test.cc  carbon_connector_test.cc  endpoint_closed_connection_test.cc  endpoint_periodic_test.cc  endpoint_unit_test.cc  epoll_test.cc  epoll_wait_test.cc  hdfs_test.cc  http_client_bench.cc  http_client_bench_v3.cc  http_client_online_test.cc  http_client_test.cc  http_client_test_v3.cc  http_parsers_test.cc  message_channel_test.cc  message_loop_test.cc  mongo_basic_test.cc  mongo_temporary_server.cc  mongo_temporary_server.h  named_endpoint_test.cc  nprobe_test.cc  nsq_client_test.cc  ping_pong.h  redis_async_test.cc  redis_temporary_server.h  rest_request_binding_test.cc  rest_request_router_test.cc  rest_service_endpoint_test.cc  runner_stress_test.cc  runner_test.cc  service_proxies_test.cc  service_testing.mk  sink_test.cc  sns-message.json  sns_parsing_test.cc  test_active_endpoint_nothing_listening.cc  test_connection_error.h  test_endpoint_connection_speed.cc  (+5 more)
service/testing/py/: py.mk
sigslot/: Makefile.am  signal.cc  signal.h  sigslot.mk  slot.cc  slot.h  slot_js.cc
sigslot/testing/: signal_slot_test_module.cc  signal_test.cc  sigslot_testing.mk  slot_test.cc
sync/: Makefile.am  sync_js.cc  utils_js.cc
types/: Makefile.am  basic_value_descriptions.h  date.cc  date.h  dtoa.h  id.cc  id.h  json_parsing.cc  json_parsing.h  json_parsing_context.cc  json_parsing_context.h  json_printing.cc  json_printing.h  localdate.cc  periodic_utils.cc  periodic_utils_value_descriptions.cc  string.cc  string.h  types.mk  url.cc  url.h  value_description.cc  value_description.h
types/testing/: date_test.cc  id_test.cc  json_handling_test.cc  json_parsing_test.cc  string_test.cc  types_testing.mk  value_description_test.cc
utf8cpp/: Makefile.am
utf8cpp/source/utf8/: core.h
utils/: Makefile.am  __init__.py  auth_proxy.py  config.py  filter_streams.py  mongo_init.h  ordered_set.py  proc_stat_json.py  rest_connector.py  scope.h  threaded_test.cc  threaded_test.h  utils.mk  zabbix_utils.py
utils/py/: __init__.py  makefile_utils.py  testing_utils.py  utils_py.mk
utils/testing/: scope_test.cc  testing.mk
